# nonebot-adapter-tailchat

./: .env.prod  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
codegen/: api.yml  check_api.py  find_null_desc.py  gen.py  sort_data.py
codegen/openapi/: gen.py
nonebot_adapter_tailchat/: __init__.py  adapter.py  api.py  bbcode.py  bot.py  config.py  const.py  event.py  exception.py  message.py  model.py  permission.py  rule.py  util.py
plugins/: add_friend.py  add_group.py  auto_add_group.py  doc.py  ping.py
test/: .env.test  conftest.py  test_message.py
